@@ -9,7 +9,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -28,7 +27,7 @@ public class GiftCertificateResponseDtoMapper {
                     ? null
                     : entity.getGiftCertificateTags().stream()
                     .map(tagDtoMapper::toDto)
-                    .collect(Collectors.toList());
+                    .toList();
             dto.setTagsDto(tagsDto);
         }
         return dto;
